# patina

./: .gitattributes  .gitignore  .gitmodules  .ignore  .secretsignore  BLACKBOX_REFACTOR_TODO.md  BOOTSTRAP_README.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDABLE_RUST_REVIEW.md  Dockerfile  ENVIRONMENT.toml  FEATURE_INTERACTIVE_DESIGN.md  HOOK_SESSION_IMPLEMENTATION.md  PLANNING_WORKFLOW.md  PROJECT_DESIGN.toml  README.md  brain  debug_ast.rs  docker-compose.yml.example  enable_all_refactored.sh  parse_session.py  release-plz.toml  session_summary_july27_full.md  test.txt  test_call_extraction.rs  test_final.sh  test_functionality.sh  test_parity.sh  test_query.sh  test_refactored.sh  test_simple_calls.rs
.cargo/: .global-cache
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  launch-secure.sh  yolo-setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: populate-repo-cleanup.yml  pr-gate.yml  release-plz.yml  release.yml  test.yml
.patina/: DESIGN.md  confidence-rules.pl  config.json  config.toml  docs-scraper.initialized  git_metrics.json  knowledge.db  link-belief-evidence.sql  load.sql  metrics_cache.json  navigation.db  navigation.db-shm  oxidize.yaml  rules.pl  schema.sql  semantic_reality.db  session.json  uid  validation-rules.pl  vector-tables.sql  version.toml  versions.json
.patina/ast_cache/: debug_ast.rs.json  test_call_extraction.rs.json  test_simple_calls.rs.json
.patina/events/: 2025-11-21-001-observation-captured.json  2025-11-21-002-observation-captured.json  2025-11-21-003-observation-captured.json  manifest.json
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
.trunk/plugins/: trunk
brain/core/: patterns.md  principles.md
brain/topics/: rails-based-design.md
docs/: git-hooks-setup.md
eval/: cross-project-queryset.json  opencode-commits-v1.json  patina-commits-v1.json  ref-repo-queryset.json  ref-repo-results.md  retrieval-queryset.json  run-ref-repo-eval.sh  temporal-error-analysis.md
examples/: semantic_search_demo.rs  test_e5_model.rs
layer/core/: adapter-pattern.md  black-box-boundaries.md  build.md  context-orchestration.md  dependable-rust-structure.md  dependable-rust.md  layer-architecture.md  modularity-through-interfaces.md  oxidized-knowledge.md  patina-system-architecture.md  pattern-evolution.md  progressive-disclosure.md  rust-ownership.md  rust-toolchain.md  safety-boundaries.md  session-capture.md  three-paradigm-test.md  unix-philosophy.md
layer/dust/: dagger-codebase-analysis.md  database-abstraction-turso-integration.md  deprecated-dagger-template-integration.md  git-aware-navigation-design-sqlite.md  scrape-to-ask-refactor-status.md
layer/lab/: queries.json
layer/personas/: persona-20251029-061054.md  persona-20251106-214532.md
layer/rules/: context.md  patterns.md  tools.md
layer/sessions/: 20250728-182427.md  20250728-184236.md  20250728-200500.md  20250728-222451.md  20250728-225012.md  20250728-231331.md  20250728-232849.md  20250728-hook-architecture-session.md  20250728-session-capture-agent.md  20250728-session-checkpoint.md  20250729-011748.md  20250729-065616.md  20250729-153209.md  20250729-172041.md  20250729-180929.md  20250729-185446.md  20250730-065949.md  20250730-080926.md  20250730-110014.md  20250730-120421.md  20250730-160041.md  20250730-174343.md  20250730-215856.md  20250731-164959.md  20250731-191904.md  20250731-192609.md  20250802-075126.md  20250802-113539.md  20250802-174710.md  20250802-193418.md  20250802-214851.md  20250802-225032.md  20250802-225700.md  20250803-081714.md  20250803-083546.md  20250803-161017.md  20250803-171916.md  20250803-182018.md  20250803-213513.md  20250804-064945.md  (+554 more)
layer/surface/: DEPENDABLE_RUST_REVIEW.md  analysis-command-architecture.md  analysis-commit-training-signal.md  analysis-patina-current-truth-and-vision.md  analysis-patina-database.md  architecture-git-event-sourced.md  architecture-neuro-symbolic.md  architecture-patina-embedding.md  architecture-patina-metal.md  architecture-patina-system.md  architecture-persona-belief.md  architecture-sqlite-usearch.md  architecture-yolo-devcontainer.md  behavioral-hints-implementation-guide.md  black-box-refactor-complete.md  black-box-refactor-plan.md  cairo-integration-learnings.md  cairo-parser-integration-plan.md  call-graph-feature-plan.md  codebase-deep-dive-analysis.md  command-structure-redesign.md  complete-language-registry-refactor-plan.md  concept-orchestration-agent.md  concept-rag-network.md  concept-repo-patina.md  database-abstraction-turso-integration.md  dependable-go.md  dependable-rust-implementation.md  dev-environments-architecture.md  distributed-knowledge-nodes.md  docling-pattern-vector-storage.md  domain-architecture.md  dual-tree-sitter-for-c.md  embeddings-integration-roadmap.md  eskil-steenberg-rust.md  fix-c-parser-stack-overflow-plan.md  git-audit-findings.md  git-aware-navigation-design.md  (+69 more)
patina-metal/: Cargo.toml  build.rs  grammar-pack.toml
patina-metal/grammars/rust/: metadata.toml
patina-metal/queries/go/: complexity.scm  patterns.scm  symbols.scm
patina-metal/queries/rust/: complexity.scm  patterns.scm  symbols.scm
patina-metal/src/: cairo.rs  grammars.rs  lib.rs  metal.rs  parser.rs  queries.rs
patina-metal/tests/: debug_test.rs  parser_test.rs  query_test.rs
scripts/: benchmark-models.sh  bootstrap.sh  download-active-model.sh  download-model.sh  download-test-models.sh  get-active-model.sh  test-linux.sh
setup/: .gitignore  README.md  bootstrap.rs  setup.sh
src/: config.rs  environment.rs  eventlog.rs  lib.rs  main.rs  migration.rs  paths.rs  preflight.rs  session.rs  version.rs  workspace_client.rs
src/adapters/: mod.rs  (+6 more)
test/: manual-hook-test.md
test-workspace/: .dockerignore  Dockerfile  PROJECT_DESIGN.toml  docker-compose.yml
test_behavioral_hints/: test.c  test.go  test.js  test.py  test.rs
tests/: embeddings_integration.rs  model_selection.rs  neuro_symbolic_integration.rs  quantization_quality.rs  semantic_search_integration.rs  semantic_search_unit.rs
workspace/: go.mod  go.sum
(+1273 files in other folders)
