[package]
name = "patina"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev = []  # Developer commands - not included in user builds

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Filesystem
dirs = "5.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Environment detection
which = "7.0"

# HTTP client (blocking only - no async)
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

# File watching
notify = "6.1"

# Database - embedded SQLite for pattern storage
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json", "load_extension"] }

# Parallel processing (better than async for our use case)
rayon = "1.10"

# Simple synchronization
parking_lot = "0.12"  # Faster mutexes

# Navigation command dependencies
colored = "2"
walkdir = "2"

# CRDT support
automerge = "0.5"

[dev-dependencies]
# Testing utilities
tempfile = "3.14"

[[bin]]
name = "patina"
path = "src/main.rs"

[lib]
name = "patina"
path = "src/lib.rs"