[workspace]
members = [".", "patina-metal"]
resolver = "2"

[package]
name = "patina"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev = []  # Developer commands - not included in user builds

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Filesystem
dirs = "5.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Environment detection
which = "7.0"

# HTTP client (blocking only - no async)
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

# File watching
notify = "6.1"

# Database - embedded SQLite for pattern storage and semantic analysis
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json", "load_extension"] }

# Parallel processing (better than async for our use case)
rayon = "1.10"

# Simple synchronization
parking_lot = "0.12"  # Faster mutexes

# Navigation command dependencies
colored = "2"

# Filesystem patterns
glob = "0.3"

# YAML support for docker-compose generation
serde_yaml = "0.9"

# Semantic analysis - moved to patina-metal
patina-metal = { path = "patina-metal" }
walkdir = "2"
ignore = "0.4"

# Tree-sitter dependencies (kept for legacy semantic module - to be removed)
tree-sitter = "0.24"

# CRDT support
automerge = "0.5"

# Symbolic reasoning - embedded Prolog for belief validation
scryer-prolog = "0.10.0"

# Embeddings and vector search
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }  # ONNX Runtime for embeddings
tokenizers = "0.15"                                                  # HuggingFace tokenizers (Rust)
ndarray = "0.16"                                                     # Array operations for embeddings
usearch = "2.21"                                                     # Fast vector similarity search (HNSW index)
zerocopy = "0.7"                                                     # Efficient vector byte conversion

[dev-dependencies]
# Testing utilities
tempfile = "3.14"
approx = "0.5"  # Testing similarity scores

[[bin]]
name = "patina"
path = "src/main.rs"

[lib]
name = "patina"
path = "src/lib.rs"