[workspace]
members = [".", "patina-metal"]
exclude = ["layer/dust"]
resolver = "2"

[package]
name = "patina-ai"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "Context orchestration for AI development - captures and evolves patterns over time"
repository = "https://github.com/NicabarNimble/patina"
keywords = ["ai", "development", "patterns", "context", "embeddings"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
dev = []  # Developer commands - not included in user builds

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Filesystem
dirs = "5.0"
shellexpand = "3.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Environment detection
which = "7.0"

# HTTP client (blocking only - no async)
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

# HTTP server (blocking - no async, thread-per-request)
rouille = "3.6"

# File watching
notify = "6.1"

# Database - embedded SQLite for pattern storage and semantic analysis
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json", "load_extension"] }

# Parallel processing (better than async for our use case)
rayon = "1.10"

# Simple synchronization
parking_lot = "0.12"  # Faster mutexes

# Random number generation (lightweight, no dependencies)
fastrand = "2.0"

# Navigation command dependencies
colored = "2"

# Filesystem patterns
glob = "0.3"

# YAML support for docker-compose generation
serde_yaml = "0.9"

# Semantic analysis - moved to patina-metal
patina-metal = { version = "0.1.0", path = "patina-metal" }
walkdir = "2"
ignore = "0.4"

# Tree-sitter - AST parsing for code scraper (11 languages)
tree-sitter = "0.24"

# Embeddings and vector search
ort = { version = "=2.0.0-rc.10", features = ["download-binaries"] }  # ONNX Runtime - pinned, rc.11 breaks API
tokenizers = "0.15"                                                  # HuggingFace tokenizers (Rust)
ndarray = "0.16"                                                     # Array operations for embeddings
usearch = "2.21"                                                     # Fast vector similarity search (HNSW index)
safetensors = "0.7"                                                  # Standard weight format (MLX-compatible, HuggingFace)
zerocopy = "0.7"                                                     # Efficient vector byte conversion
regex = "1.12.2"

# Secrets v2 - age encryption and macOS Keychain
age = { version = "0.11", features = ["armor"] }
atty = "0.2"  # TTY detection for interactive prompts

# macOS-only: Keychain integration for Touch ID protected secrets
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.5"

# Unix-only: fork/setsid for background sync
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Testing utilities
tempfile = "3.14"
approx = "0.5"  # Testing similarity scores

[[bin]]
name = "patina"
path = "src/main.rs"

[lib]
name = "patina"
path = "src/lib.rs"
