[package]
name = "patina-metal"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
anyhow = "1.0"
once_cell = "1.19"

# Git dependencies for problematic parsers
tree-sitter-solidity = { git = "https://github.com/JoranHonig/tree-sitter-solidity", tag = "v1.2.13" }
tree-sitter-cairo = { git = "https://github.com/JoranHonig/tree-sitter-cairo", branch = "main" }

[build-dependencies]
cc = "1.0"

[features]
default = ["rust", "go", "solidity", "cairo"]
rust = []
go = []
solidity = []
cairo = []